--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <!-- iconos de boostrap -->
   </head>
   <body>
     <header class="header">
@@ -83,6 +85,36 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer ">
+      <div  class="footer__grid container">
+        <div>
+          <h4>Educacion</h4>
+          <ul class="footer__grid-list">
+            <li><a href="">Dise;o UX/UI</a></li>
+            <li><a href="">Programacion</a></li>
+            <li><a href="">Ciberseguridad</a></li>
+            <li><a href="">Data</a></li>
+            <li><a href="">Marketiong Digital</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Nosotros</h4>
+          <ul class="footer__grid-list">
+            <li><a href="">Equipo</a></li>
+            <li><a href="">Testimonios</a></li>
+            <li><a href="">Terminos y Condiciones</a></li>
+          </ul>
+        </div>
+        <div class="footer__grid-list">
+          <h3>Sumate a CODER y lleva tu carrera al siguiente nivel</h3>
+          <div class="footer__rrss">
+            <a href=""><i class="bi bi-twitter"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+          </div>
+
+        </div>
+      </div> 
+    </footer>
   </body>
 </html>
